--- a/principal.html
+++ b/principal.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="https://www.arbosbank.com.br">QUEM SOMOS</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="https://www.arbosbank.com.br">CONTATO</a>
+                        <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
                       </li>
                     </ul>
                   </div>
@@ -41,25 +41,35 @@
         
         <main>
           <section class="carrossel">
-            <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000">
+            <div id="carouselExampleCaptions" class="carousel slide">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="src/img/8.png" class="d-block w-100 imagem-carrossel-um" alt="...">
+                  <img src="src/img/logo_transparent_background.png" class="d-block w-100 imagem-carrossel-um" alt="...">
                   <div class="carousel-caption d-none d-md-block h-50">
-                    <h1 class="fonte-titulo display-4">Estamos desenvolvendo uma plataforma para que a sociedade possa fazer a diferença no combate as mudanças climáticas.</h1>
+                    <h5>Second slide label</h5>
+                    <p class= "fonte-titulo display-4">Some representative placeholder content for the first slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="src/img/4.png" class="d-block w-100 imagem-carrossel-dois" alt="...">
-                  <div class="carousel-caption d-none d-md-block h-50">
-                   <h1 class="fonte-titulo display-4">Esta plataforma permitirá contabilizar, comercializar e investir em crédito de carbono!</h1>
+                  <img src="src/img/8.png" class="d-block w-100 imagem-carrossel-dois" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Estamos desenvolvendo uma plataforma para que a sociedade possa fazer a diferença no combate as mudanças climáticas.</p>
                   </div>
                 </div>
-             </div>
+                <div class="carousel-item">
+                  <img src="src/img/4.png" class="d-block w-100 imagem-carrossel-tres" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Esta plataforma permitirá contabilizar, comercializar e investir em crédito de carbono!</p>
+                  </div>
+                </div>
+              </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -98,8 +108,7 @@
             <article class="container mt-5">
               <h5 class="fs-3 mt-5 mb-3">Quem somos</h5>
               <div class="d-flex align-items-center">
-              <img src="https://static.wixstatic.com/media/b51655_e6f83ad084404a358a571b01b97d0609~mv2.jpg/v1/fill/w_271,h_266,al_c,lg_1,q_80,enc_auto/LogoSample_ByTailorBrands%20(9)_edited_edi.jpg"
-               class="img-fluid mr-3" alt="Logo">
+              <img src="src/img/logo_transparent_background.png " class="img-fluid mr-3 img-logo" alt="Logo">
               
                <p class="lh-sm mt-3 mx-2">Somos uma startup em desenvolvimento com apoio da FATEC - Piracicaba (Faculdade de Tecnologia de Piracicaba) 
                 e em fase de Incubação pelo programa Explorer X do Santander. Nosso projeto está ligada a ODS 2030 (Objetivos 
@@ -130,7 +139,48 @@
               <p class="lh-sm">Proporcionar à sociedade ferramentas que possam ajudar na conscientização e compensação dos impactos causados pelos 
                 Gases de Efeito Estufa (GEE).</p>
             </article>
+
+            <div class="modal fade" id="modal-contato" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modal-contato">modal-contato</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="mb-3">
+                      <label for="formGroupExampleInput">NOME</label>
+                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome completo">
+                    </div>
+                    <div class="mb-3">
+                      <label for="formGroupExampleInput">SOBRENOME</label>
+                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome completo">
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleFormControlInput1" class="form-label">EMAIL</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleFormControlInput1" class="form-label">NUMERO</label>
+                      <input type="number" class="form-control" id="inputNumero" placeholder="Digite seu número de telefone">
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn text-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn botao-cor-especial">Salvar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
         </main>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+          integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
+          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
+</html>
 
 
