--- a/principal.html
+++ b/principal.html
@@ -41,7 +41,7 @@
         
         <main>
           <section class="carrossel">
-            <div id="carouselExampleCaptions" class="carousel slide">
+            <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -49,7 +49,7 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="src/img/logo_transparent_background.png" class="d-block w-100 imagem-carrossel-um" alt="...">
+                  <img src="src/img/white_logo_color_background.jpg" class="d-block w-100 imagem-carrossel-um" alt="...">
                   <div class="carousel-caption d-none d-md-block h-50">
                     <h5>Second slide label</h5>
                     <p class= "fonte-titulo display-4">Some representative placeholder content for the first slide.</p>
