--- a/principal.html
+++ b/principal.html
@@ -80,6 +80,38 @@
             </div>
         </section>
 
+        <section>
+          <div class="row">
+            <div class="largura-card p-0 m-4 col-12 col-md-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="largura-card p-0 m-4 col-12 col-md-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="largura-card p-0 m-4 col-12 col-md-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <article class="container mt-5">
           <h3 class="fs-3 mt-5 mb-3">Crédito de carbono</h3>
           <div class="d-flex align-items-center">
@@ -147,19 +179,19 @@
                 <div class="modal-body">
                   <div class="mb-3">
                     <label for="formGroupExampleInput">NOME</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome completo">
+                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome">
                   </div>
                   <div class="mb-3">
                     <label for="formGroupExampleInput">SOBRENOME</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome completo">
+                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Sobrenome">
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">EMAIL</label>
-                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">NUMERO</label>
-                      <input type="number" class="form-control" id="inputNumero" placeholder="Digite seu número de telefone">
+                      <input type="number" class="form-control" id="inputNumero" placeholder="(xx) xxxxx-xxxx">
                   </div>
                 </div>
                 <div class="modal-footer">
