--- a/principal.html
+++ b/principal.html
@@ -27,6 +27,9 @@
                   <a class="nav-link active" aria-current="page" href="https://www.arbosbank.com.br/">INICIO</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="https://www.arbosbank.com.br">PRODUTOS</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="https://www.arbosbank.com.br">CRÉDITO DE CARBONO</a>
                 </li>
                 <li class="nav-item">
@@ -78,34 +81,45 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
+          </div>  
         </section>
 
         <section>
-          <div class="row">
-            <div class="largura-card p-0 m-4 col-12 col-md-4">
-              <div class="card">
+          <div class="container mt-5 mx-5">
+          <img src="src/img/dark_logo_transparent_background_name.png" class="font-name">
+          <p>A Arbos Bank, trata-se de um Banco digital de crédito de Carbono capaz de
+            contabilizar, comercializar e investir no mercado de carbono.</p>
+          <div class="row d-flex justify-content-between">
+            <div class="border-success largura-card mt-5 p-2 g-co">
+              <div class="card card-size">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Consultoria</h5>
+                  <p class="card-text">Oferecemos serviços de consultoria, fazendo inventários de emissões,
+                    e projetos de compensação carbono, gerados por pessoas Físicas e Jurídicas em
+                    qualquer área de atuação.</p>
+                  <a href="#" class="btn text-bg-success">Fale conosco</a>
                 </div>
               </div>
             </div>
-            <div class="largura-card p-0 m-4 col-12 col-md-4">
-              <div class="card">
+            <div class="border-success largura-card mt-5 p-2 g-col-6">
+              <div class="card card-size">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Compra e venda</h5>
+                  <p class="card-text">A Arbos Bank trabalha com a comercialização dos créditos de carbono atuando
+                    como intermediário na compra e venda de créditos através de uma plataforma,
+                    ajudando empresas e indivíduos a compensar suas emissões GEE.</p>
+                  <a href="#" class="btn text-bg-success">Fale conosco</a>
                 </div>
               </div>
             </div>
-            <div class="largura-card p-0 m-4 col-12 col-md-4">
-              <div class="card">
+            <div class="border-success largura-card mt-5 p-2 g-co">
+              <div class="card card-size">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Investimento</h5>
+                  <p class="card-text">Oferecemos a possibilidade de fazer investimento em fundos
+                    voltados para projetos sustentáveis como, energias renováveis, desmatamento
+                    evitado, reflorestamento e entre outras opções</p>
+                  <a href="#" class="btn text-bg-success">Fale conosco</a>
                 </div>
               </div>
             </div>
@@ -133,7 +147,7 @@
             </p>
           </div>
           </article>
-          <img src="src/img/13.png" class="img-fluid mr-3 img-cred" alt="rio">
+          <img src="src/img/13.png" class="img-fluid mr-3 img-cred" alt="Piramide de Sustentabilidade">
 
           <article class="container mt-5">
             <h5 class="fs-3 mt-5 mb-3">Quem somos</h5>
