--- a/principal.html
+++ b/principal.html
@@ -105,7 +105,7 @@
               <div class="card card-size">
                 <div class="card-body">
                   <h5 class="card-title">Compra e venda</h5>
-                  <p class="card-text">A Arbos Bank trabalha com a comercialização dos créditos de carbono atuando
+                  <p class="card-text">Comercialização dos créditos de carbono atuando
                     como intermediário na compra e venda de créditos através de uma plataforma,
                     ajudando empresas e indivíduos a compensar suas emissões GEE.</p>
                   <a href="#" class="btn text-bg-success">Fale conosco</a>
