--- a/principal.html
+++ b/principal.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="src/img/only_logo_transparent_background.png" 
@@ -24,16 +24,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://www.arbosbank.com.br/">INICIO</a>
+                  <a class="nav-link active" aria-current="page" href="#inicio">INICIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.arbosbank.com.br">PRODUTOS</a>
+                  <a class="nav-link" href="#produtos">PRODUTOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.arbosbank.com.br">CRÉDITO DE CARBONO</a>
+                  <a class="nav-link" href="#credito-carbono">CRÉDITO DE CARBONO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.arbosbank.com.br">QUEM SOMOS</a>
+                  <a class="nav-link" href="#quem-somos" >QUEM SOMOS</a>
                 </li>
                 <li class="nav-item">
                   <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
@@ -45,7 +45,7 @@
     </header>
         
     <main>
-      <section class="carrossel">
+      <section class="carrossel" id="inicio">
         <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,7 +84,7 @@
           </div>  
         </section>
 
-        <section>
+        <section id="produtos">
           <div class="container mt-5 mx-5">
           <img src="src/img/dark_logo_transparent_background_name.png" class="font-name">
           <p>A Arbos Bank, trata-se de um Banco digital de crédito de Carbono capaz de
@@ -126,7 +126,7 @@
           </div>
         </section>
 
-        <article class="container mt-5">
+        <article class="container mt-5" id="credito-carbono">
           <h3 class="fs-3 mt-5 mb-3">Crédito de carbono</h3>
           <div class="d-flex align-items-center">
             <p class="lh-sm mt-3 mx-2">O mercado de carbono não para de crescer e você não pode deixar de fazer parte dessa escalada!
@@ -150,7 +150,7 @@
           <img src="src/img/13.png" class="img-fluid mr-3 img-cred" alt="Piramide de Sustentabilidade">
 
           <article class="container mt-5">
-            <h5 class="fs-3 mt-5 mb-3">Quem somos</h5>
+            <h5 class="fs-3 mt-5 mb-3" id="quem-somos">Quem somos</h5>
             <div class="d-flex align-items-center">
             <img src="src/img/logo_transparent_background.png " class="img-fluid mr-3 img-logo" alt="Logo">
               <p class="lh-sm mt-3 mx-2">Somos uma startup em desenvolvimento com apoio da FATEC - Piracicaba (Faculdade de Tecnologia de Piracicaba) 
@@ -215,6 +215,7 @@
               </div>
             </div>
           </div>
+          
     </main>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
