--- a/principal.html
+++ b/principal.html
@@ -97,7 +97,7 @@
                   <p class="card-text">Oferecemos serviços de consultoria, fazendo inventários de emissões,
                     e projetos de compensação carbono, gerados por pessoas Físicas e Jurídicas em
                     qualquer área de atuação.</p>
-                  <a href="#" class="btn text-bg-success">Fale conosco</a>
+                  <a href="#" class="btn text-bg-success" data-bs-toggle="modal" data-bs-target="#modal-contato">Fale conosco</a>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
                   <p class="card-text">Comercialização dos créditos de carbono atuando
                     como intermediário na compra e venda de créditos através de uma plataforma,
                     ajudando empresas e indivíduos a compensar suas emissões GEE.</p>
-                  <a href="#" class="btn text-bg-success">Fale conosco</a>
+                  <a href="#" class="btn text-bg-success" data-bs-toggle="modal" data-bs-target="#modal-contato">Fale conosco</a>
                 </div>
               </div>
             </div>
@@ -119,7 +119,7 @@
                   <p class="card-text">Oferecemos a possibilidade de fazer investimento em fundos
                     voltados para projetos sustentáveis como, energias renováveis, desmatamento
                     evitado, reflorestamento e entre outras opções</p>
-                  <a href="#" class="btn text-bg-success">Fale conosco</a>
+                  <a href="#" class="btn text-bg-success" data-bs-toggle="modal" data-bs-target="#modal-contato">Fale conosco</a>
                 </div>
               </div>
             </div>
