--- a/principal.html
+++ b/principal.html
@@ -15,29 +15,26 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#inicio">
             <img src="src/img/only_logo_transparent_background.png" 
               alt="Arbos Bank" width="40" height="40">
           </a>
-          <div class="collapse navbar-collapse" id="navbarNav">
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#inicio">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#produtos">PRODUTOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#credito-carbono">CRÉDITO DE CARBONO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#quem-somos" >QUEM SOMOS</a>
-                </li>
-                <li class="nav-item">
-                  <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
-                </li>
+                <li><a class="nav-link active" aria-current="page" href="#inicio">INICIO</a></li>
+                <li><a class="nav-link" href="#produtos">PRODUTOS</a></li>
+                <li><a class="nav-link" href="#credito-carbono">CRÉDITO DE CARBONO</a></li>
+                <li><a class="nav-link" href="#quem-somos" >QUEM SOMOS</a></li>
+                <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
             </ul>
           </div>
         </div>
@@ -51,9 +48,18 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
           </div>
           <div class="carrossel-conteiner carousel-inner">
             <div class="carousel-item active ">
+              <img src="https://www.publicdomainpictures.net/pictures/200000/nahled/plain-black-background.jpg" class="d-block w-100 imagem-carrossel-um" alt="dark">
+                <div class="carousel-caption d-none d-md-block h-75">
+                  <p class= "fonte-carrossel display-4 fs-1 text-shadow">A Arbos Bank tem a meta de reflorestar Meio Milhão de 
+                    hectares de Mata Atlântica e Floresta Amazônica, e você pode ser parte dessa transformação para um ecossistema 
+                    100% verde.</br> possa fazer a diferença no combate as mudanças climáticas.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
               <img src="src/img/18.jpg" class="d-block w-100 imagem-carrossel-um" alt="Logo Arbos Bank">
                 <div class="carousel-caption d-none d-md-block h-75">
                   <p class= "fonte-carrossel display-4 fs-2 text-shadow">Estamos desenvolvendo uma plataforma para que a sociedade </br> possa fazer a diferença no combate as mudanças climáticas.</p>
@@ -85,7 +91,7 @@
         </section>
 
         <section id="produtos">
-          <div class="container mt-5 mx-5">
+          <div class="container mt-5 mx-5  mt-1 mx-1">
           <img src="src/img/dark_logo_transparent_background_name.png" class="font-name">
           <p>A Arbos Bank, trata-se de um Banco digital de crédito de Carbono capaz de
             contabilizar, comercializar e investir no mercado de carbono.</p>
@@ -173,14 +179,20 @@
 
           <article class="container mt-5">
             <h2>Missão</h2>
-            <p class="lh-sm">Criar uma nova engrenagem no setor econômico totalmente voltada para o mercado de Carbono, de forma que o próprio 
-                sistema se retroalimente, trazendo benefícios não apenas para a sociedade mas principalmente para o planeta.</p>
+            <p class="lh-sm">Ser um Banco digital de Créditos de Carbono para que a sociedade de uma forma
+              geral possa contabilizar, comercializar e investir em Crédito de Carbono.</p>
           </article>
 
           <article class="container mt-5">
             <h2>Visão</h2>
-            <p class="lh-sm">Proporcionar à sociedade ferramentas que possam ajudar na conscientização e compensação dos impactos causados pelos 
-                Gases de Efeito Estufa (GEE).</p>
+            <p class="lh-sm">Ser uma das principais engrenagens no mercado de Crédito de Carbono.</p>
+          </article>
+
+          <article class="container mt-5">
+            <h2>Valores</h2>
+            <p class="lh-sm">Sustentabilidade; Economia verde; Cuidar do nosso Planeta; Conexão entre o
+              homem e a natureza; Por um planeta sustentável; Responsabilidade Ambiental; A união
+              faz a força.</p>
           </article>
 
           <div class="modal fade" id="modal-contato" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
