--- a/principal.html
+++ b/principal.html
@@ -16,70 +16,76 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top" aria-label="Main navigation">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#inicio">
-          <img src="src/img/only_logo_transparent_background.png" alt="Arbos Bank" width="40" height="40">
+          <img src="src/img/only_logo_transparent_background.png" 
+            alt="Arbos Bank" width="40" height="40">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-          
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li><a class="nav-link active" aria-current="page" href="#inicio">INÍCIO</a></li>
-            <li><a class="nav-link" href="#produtos">PRODUTOS</a></li>
-            <li><a class="nav-link" href="#credito-carbono">CRÉDITO DE CARBONO</a></li>
-            <li><a class="nav-link" href="#quem-somos">QUEM SOMOS</a></li>
-            <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
+              <li><a class="nav-link active" aria-current="page" href="#inicio">INICIO</a></li>
+              <li><a class="nav-link" href="#produtos">PRODUTOS</a></li>
+              <li><a class="nav-link" href="#credito-carbono">CRÉDITO DE CARBONO</a></li>
+              <li><a class="nav-link" href="#quem-somos" >QUEM SOMOS</a></li>
+              <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-contato" href="#">CONTATO</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-
-  <main>
-    <section class="carrossel" id="inicio">
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-interval="3000">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
-        </div>
-        <div class="carrossel-conteiner carousel-inner">
-
-          <div class="carousel-item active">
-            <img src="src/img/Slide 1.jpg"
-              class="d-block w-100 imagem-carrossel-um" alt="dark">
-          </div>
-          <div class="carousel-item">
-            <img src="src/img/Slide 2.jpg" class="d-block w-100 imagem-carrossel-dois" alt="Logo Arbos Bank">
-          </div>
-          <div class="carousel-item">
-            <img src="src/img/Slide 3.jpg" class="d-block w-100 imagem-carrossel-tres" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="src/img/Slide 4.jpg" class="d-block w-100 imagem-carrossel-quatro" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  
+  <section class="carrossel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
-    </section>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="src/img/Slide 1.jpg" class="d-block w-100 imagem-carrossel-um" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50">
+            <h1 class="fonte-titulo display-4"></h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="src/img/Slide 2.jpg" class="d-block w-100 imagem-carrossel-dois" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50 ">
+           <h1 class="fonte-titulo display-4"></h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="src/img/Slide 3.jpg" class="d-block w-100 imagem-carrossel-tres" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50 ">
+           <h1 class="fonte-titulo display-4"></h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="src/img/Slide 4.jpg" class="d-block w-100 imagem-carrossel-quatro" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50 ">
+           <h1 class="fonte-titulo display-4"></h1>
+          </div>
+        </div>
+     </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 
     <section id="produtos">
       <div class="container mt-5 mx-5 mt-1 mx-1">
